--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -68,7 +68,7 @@ dotnet/embed_build_outputs=false
 
 [preset.1]
 
-name="Linux"
+name="Linux/X11"
 platform="Linux"
 runnable=true
 advanced_options=false
