--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -69,6 +69,10 @@ jobs:
           mkdir -p build/windows
           mkdir -p build/linux
 
+      - name: Export to Web
+        run: |
+          godot --headless --path "${{ env.PROJECT_PATH }}" --export-release "${{ env.EXPORT_NAME }}" "build/web/index.html"
+
       - name: Export Windows
         run: |
           godot --headless --verbose --path ${{ env.PROJECT_PATH }} --export-release "Windows Desktop" ./build/windows/${{ env.EXPORT_NAME }}.exe
@@ -76,6 +80,12 @@ jobs:
       - name: Export Linux
         run: |
           godot --headless --verbose --path ${{ env.PROJECT_PATH }} --export-release "Linux/X11" ./build/linux/${{ env.EXPORT_NAME }}.x86_64
+
+      - name: Upload Web Build
+        uses: actions/upload-artifact@v4
+        with:
+          name: web-build
+          path: build/web
 
       - name: Upload Windows Build
         uses: actions/upload-artifact@v4
