Fix export preset name for Web platform in GitHub Actions workflow

--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -71,7 +71,7 @@ jobs:
 
       - name: Export to Web
         run: |
-          godot --headless --path "${{ env.PROJECT_PATH }}" --export-release "${{ env.EXPORT_NAME }}" "build/web/index.html"
+          godot --headless --path "${{ env.PROJECT_PATH }}" --export-release "Web" "build/web/index.html"
 
       - name: Export Windows
         run: |
