--- a/Jogo Pinguim.csproj
+++ b/Jogo Pinguim.csproj
@@ -5,5 +5,6 @@
     <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'ios' ">net8.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>JogoPinguim</RootNamespace>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 </Project>
