Update GODOT_VERSION to 3.6.2-stable in GitHub Actions workflow

--- a/.github/workflows/dotnet-web.yml
+++ b/.github/workflows/dotnet-web.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 env:
-  GODOT_VERSION: '3.5.5'
+  GODOT_VERSION: ' 3.6.2-stable'
   EXPORT_NAME: MeuJogo
   PROJECT_PATH: '.'
 
