--- a/.github/workflows/dotnet-web.yml
+++ b/.github/workflows/dotnet-web.yml
@@ -71,8 +71,7 @@ jobs:
 
       - name: Create Build Directories
         run: |
-          mkdir -p build/windows
-          mkdir -p build/linux
+          mkdir -p build/web
 
       - name: Export to Web
         run: |
