--- a/.github/workflows/dotnet-web.yml
+++ b/.github/workflows/dotnet-web.yml
@@ -22,6 +22,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        
+      - name: Atualizar versão da config
+        run: sed -i 's/config_version=.*/config_version=4/' config.ini
 
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
