--- a/.github/workflows/dotnet-web.yml
+++ b/.github/workflows/dotnet-web.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Atualizar versão da config
-        run: sed -i 's/config_version=.*/config_version=4/' config.ini
+        run: sed -i 's/config_version=.*/config_version=4/' project.godot
 
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
