--- a/.github/workflows/dotnet-web.yml
+++ b/.github/workflows/dotnet-web.yml
@@ -75,7 +75,7 @@ jobs:
 
       - name: Export Web
         run: |
-          godot --headless --verbose --path ${{ env.PROJECT_PATH }} --export-release "HTML5" ./build/windows/${{ env.EXPORT_NAME }}.exe
+          godot --headless --verbose --path ${{ env.PROJECT_PATH }} --export-release "Web" ./build/windows/${{ env.EXPORT_NAME }}.exe
 
       - name: Upload Windows Build
         uses: actions/upload-artifact@v4
